Updated Project Definition

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "dlarrimore company",
+  "orgName": "SFDC gPBU",
   "edition": "Developer",
   "features": ["Communities","DebugApex","Workflow"]
 }
