--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -12,6 +12,8 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "47.0",
     "packageAliases": {
-        "Demo Reset Tools": "0Ho3h000000k9r4CAA"
+        "Demo Reset Tools": "0Ho3h000000k9rJCAQ",
+        "Demo Reset Tools@0.1.0-1": "04t3h000003vnvyAAA",
+        "Demo Reset Tools@0.1.0-3": "04t3h000003voCjAAI"
     }
 }
