Updated Test Classes
Hint, they don't do anything yet....

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -15,6 +15,7 @@
         "Demo Reset Tools": "0Ho3h000000k9rJCAQ",
         "Demo Reset Tools@0.1.0-1": "04t3h000003vnvyAAA",
         "Demo Reset Tools@0.1.0-3": "04t3h000003voCjAAI",
-        "Demo Reset Tools@0.1.0-4": "04t3h000003vofiAAA"
+        "Demo Reset Tools@0.1.0-4": "04t3h000003vofiAAA",
+        "Demo Reset Tools@0.1.0-5": "04t3h000003vrTrAAI"
     }
 }
